--- a/configuration.org
+++ b/configuration.org
@@ -3,10 +3,20 @@
 #+STARTUP: hidestars
 
 * Emacs Configuration
-** Toggle debug messages
-#+BEGIN_SRC emacs-lisp
-;; (setq debug-on-error t)
-#+END_SRC
+** Support older versions of Emacs
+
+[[https://github.com/akirak/emacs.d/blob/master/main.org][@akirak]]
+=when-let= and =if-let= are available in Emacs 25.1, but they have been renamed to =when-let*= and =if-let*= in 26.1, which are correct names to describe their behaviours.
+
+#+begin_src emacs-lisp
+  (eval-and-compile
+    (when (version< emacs-version "26")
+      (with-no-warnings
+        (defalias 'when-let* #'when-let)
+        (function-put #'when-let* 'lisp-indent-function 1)
+        (defalias 'if-let* #'if-let)
+        (function-put #'if-let* 'lisp-indent-function 2))))
+#+end_src
 
 
 ** Turn on functions disabled by default
