--- a/configuration.org
+++ b/configuration.org
@@ -204,9 +204,20 @@ The bulk of the packages to install
 #+END_SRC
 
 
-** Setup meta
+** Setup convenience packages
 
 Requirements: [[*Improved keybinding][setup keybindings]] 
+
+#+begin_src emacs-lisp
+(use-package desktop
+  :config
+  ;; Desktop sessions
+  ;; http://www.gnu.org/software/emacs/manual/html_node/emacs/Saving-Emacs-Sessions.html
+  (unless (daemonp) (desktop-save-mode t))
+  :custom
+  (desktop-save 'if-exists)
+  (desktop-restore-reuses-frames 'keep))
+#+end_src
 
 Setup a bunch of useful features (Disabled for now)
 
